@@ -2,6 +2,16 @@
 
         Reviewed by Geoff, landed by Darin.
 
+        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5308
+          Number.toFixed doesn't include leading 0
+
+        * kjs/number_object.cpp: (NumberProtoFunc::callAsFunction):
+        Fixed a "<" that should have been a "<=".
+
+2006-01-11  Ricci Adams  <ricciadams@apple.com>
+
+        Reviewed by Geoff, landed by Darin.
+
         - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5307
           Number.toFixed doesn't round 0.5 up
 
